--- a/Wilson/Base.lproj/Main.storyboard
+++ b/Wilson/Base.lproj/Main.storyboard
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="SF-UI-Display-Light.ttf">
+            <string>SFUIDisplay-Light</string>
+        </mutableArray>
+        <mutableArray key="SF-UI-Display-Regular.ttf">
+            <string>SFUIDisplay-Regular</string>
+            <string>SFUIDisplay-Regular</string>
+            <string>SFUIDisplay-Regular</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="LoginViewController" customModule="Wilson" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +27,134 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background-login" translatesAutoresizingMaskIntoConstraints="NO" id="3C3-Zj-tTw">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Dyr-Ay-DoJ">
+                                <rect key="frame" x="180" y="100" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="310-dK-lrs"/>
+                                    <constraint firstAttribute="width" constant="240" id="8KG-dZ-hyF"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0X9-UM-JCh">
+                                <rect key="frame" x="20" y="331" width="560" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="7El-5b-Z4H"/>
+                                    <constraint firstAttribute="width" constant="560" id="OLK-FK-VH7"/>
+                                    <constraint firstAttribute="height" constant="30" id="qEX-d5-rJn"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="OLK-FK-VH7"/>
+                                        <exclude reference="qEX-d5-rJn"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cxd-YN-h0p">
+                                <rect key="frame" x="20" y="397" width="560" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="560" id="RIT-SX-uAK"/>
+                                    <constraint firstAttribute="height" constant="30" id="T7t-EH-Tk4"/>
+                                </constraints>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="RIT-SX-uAK"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nLH-qh-3Ml">
+                                <rect key="frame" x="154" y="499" width="293" height="51"/>
+                                <color key="backgroundColor" red="0.50196078430000002" green="0.30588235289999999" blue="0.60784313729999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="9x4-Yk-0R3"/>
+                                    <constraint firstAttribute="width" constant="293" id="Kc4-eh-Khu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="16"/>
+                                <inset key="contentEdgeInsets" minX="15" minY="15" maxX="15" maxY="15"/>
+                                <state key="normal" title="Sign In">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="SignIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kS6-eQ-qYT"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CYF-Im-Zpd">
+                                <rect key="frame" x="209" y="558" width="183" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="09H-Xw-clL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="11"/>
+                                <state key="normal" title="DON'T HAVE AN ACCOUNT? SIGN UP">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="SignUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c6q-1n-0vA"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="CYF-Im-Zpd" firstAttribute="top" secondItem="nLH-qh-3Ml" secondAttribute="bottom" constant="8" id="17x-jT-lSD"/>
+                            <constraint firstItem="0X9-UM-JCh" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="4ZA-Y1-Okx"/>
+                            <constraint firstItem="cxd-YN-h0p" firstAttribute="top" secondItem="0X9-UM-JCh" secondAttribute="bottom" constant="36" id="6Wt-eg-IyE"/>
+                            <constraint firstItem="cxd-YN-h0p" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="9YL-Kb-zKb"/>
+                            <constraint firstItem="0X9-UM-JCh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="BCZ-MX-cTP"/>
+                            <constraint firstItem="Dyr-Ay-DoJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="80" id="BWB-uQ-aAk"/>
+                            <constraint firstItem="nLH-qh-3Ml" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I9e-PT-6Jh"/>
+                            <constraint firstItem="3C3-Zj-tTw" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" id="IsY-Aq-7Vo"/>
+                            <constraint firstItem="cxd-YN-h0p" firstAttribute="top" secondItem="0X9-UM-JCh" secondAttribute="top" id="NJY-2G-3Pp"/>
+                            <constraint firstItem="cxd-YN-h0p" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="QEa-4j-mqX"/>
+                            <constraint firstItem="3C3-Zj-tTw" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="SKI-am-88E"/>
+                            <constraint firstItem="0X9-UM-JCh" firstAttribute="top" secondItem="Dyr-Ay-DoJ" secondAttribute="bottom" constant="103" id="Xfg-wA-dQH"/>
+                            <constraint firstItem="cxd-YN-h0p" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dKX-Rp-XhG"/>
+                            <constraint firstItem="CYF-Im-Zpd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hrL-Hw-PRp"/>
+                            <constraint firstItem="Dyr-Ay-DoJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="80" id="i6r-iv-AdO"/>
+                            <constraint firstItem="3C3-Zj-tTw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ihf-BI-PNw"/>
+                            <constraint firstItem="Dyr-Ay-DoJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jkp-2q-0Qx"/>
+                            <constraint firstItem="3C3-Zj-tTw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lTU-ht-Ebt"/>
+                            <constraint firstItem="0X9-UM-JCh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vab-4I-RwF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nLH-qh-3Ml" secondAttribute="bottom" constant="50" id="wt9-Ar-JAS"/>
+                            <constraint firstItem="0X9-UM-JCh" firstAttribute="top" secondItem="Dyr-Ay-DoJ" secondAttribute="top" id="zSD-XT-V56"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="BWB-uQ-aAk"/>
+                                <exclude reference="zSD-XT-V56"/>
+                                <exclude reference="NJY-2G-3Pp"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="ButtonSignIn" destination="nLH-qh-3Ml" id="tlQ-ks-IXU"/>
+                        <outlet property="InputEmail" destination="0X9-UM-JCh" id="7Je-V1-tb2"/>
+                        <outlet property="InputPassword" destination="cxd-YN-h0p" id="IaF-Rg-uXE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="520" y="479"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Logo" width="525" height="278"/>
+        <image name="background-login" width="750" height="1334"/>
+    </resources>
 </document>
