--- a/Wilson/Base.lproj/Main.storyboard
+++ b/Wilson/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -12,11 +12,16 @@
             <string>SFUIDisplay-Light</string>
             <string>SFUIDisplay-Light</string>
             <string>SFUIDisplay-Light</string>
+            <string>SFUIDisplay-Light</string>
         </mutableArray>
         <mutableArray key="SF-UI-Display-Regular.ttf">
             <string>SFUIDisplay-Regular</string>
             <string>SFUIDisplay-Regular</string>
             <string>SFUIDisplay-Regular</string>
+            <string>SFUIDisplay-Regular</string>
+        </mutableArray>
+        <mutableArray key="SF-UI-Display-Semibold.ttf">
+            <string>SFUIDisplay-Semibold</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -176,43 +181,83 @@
         <scene sceneID="dn1-qv-ij6">
             <objects>
                 <tableViewController id="HMO-i8-oKz" customClass="EventsTableViewController" customModule="Wilson" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="140" sectionHeaderHeight="28" sectionFooterHeight="28" id="HGg-lZ-Wgb">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="148" sectionHeaderHeight="28" sectionFooterHeight="28" id="HGg-lZ-Wgb">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="140" id="byX-N1-qnC" customClass="EventTableViewCell" customModule="Wilson" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="600" height="140"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="Cell" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="148" id="byX-N1-qnC" customClass="EventTableViewCell" customModule="Wilson" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="600" height="148"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="byX-N1-qnC" id="wnX-DI-Czt">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="139"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="147"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bDB-rT-hYD">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="139"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bDB-rT-hYD">
+                                            <rect key="frame" x="0.0" y="19" width="110" height="110"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="110" id="3PA-tl-adk"/>
+                                                <constraint firstAttribute="height" constant="110" id="jCs-4j-XaU"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMn-tb-M2f">
-                                            <rect key="frame" x="8" y="59" width="50" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Address" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UjU-ps-Y2p">
+                                            <rect key="frame" x="136" y="86" width="456" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="g15-OV-Ege"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="SFUIDisplay-Regular" family="SF UI Display" pointSize="14"/>
+                                            <color key="textColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UjU-ps-Y2p">
-                                            <rect key="frame" x="8" y="80" width="160" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Region Name" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1b3-zb-jMb">
+                                            <rect key="frame" x="128" y="106" width="464" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="DpG-np-IfD"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="SFUIDisplay-Semibold" family="SF UI Display" pointSize="13"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="URL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1b3-zb-jMb">
-                                            <rect key="frame" x="8" y="102" width="160" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qMn-tb-M2f">
+                                            <rect key="frame" x="118" y="19" width="474" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Zeg-F8-7za"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="SFUIDisplay-Light" family="SF UI Display" pointSize="20"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="qMn-tb-M2f" firstAttribute="top" secondItem="bDB-rT-hYD" secondAttribute="top" id="4vP-oe-OsH"/>
+                                        <constraint firstItem="UjU-ps-Y2p" firstAttribute="leading" secondItem="bDB-rT-hYD" secondAttribute="leading" id="5Xs-CL-B23"/>
+                                        <constraint firstItem="1b3-zb-jMb" firstAttribute="leading" secondItem="bDB-rT-hYD" secondAttribute="trailing" id="F82-x2-3ZW"/>
+                                        <constraint firstAttribute="topMargin" secondItem="qMn-tb-M2f" secondAttribute="top" id="Puj-hV-9yT"/>
+                                        <constraint firstItem="bDB-rT-hYD" firstAttribute="centerY" secondItem="wnX-DI-Czt" secondAttribute="centerY" id="Qiq-i3-17D"/>
+                                        <constraint firstItem="bDB-rT-hYD" firstAttribute="leading" secondItem="wnX-DI-Czt" secondAttribute="leadingMargin" constant="-8" id="UR9-aQ-tiU"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="UjU-ps-Y2p" secondAttribute="trailing" id="ZB6-0t-1TR"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="qMn-tb-M2f" secondAttribute="trailing" id="fE2-1l-fnm"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="UjU-ps-Y2p" secondAttribute="trailing" id="jno-Nl-Y60"/>
+                                        <constraint firstItem="qMn-tb-M2f" firstAttribute="leading" secondItem="bDB-rT-hYD" secondAttribute="trailing" constant="8" id="o7y-MY-6aL"/>
+                                        <constraint firstAttribute="topMargin" secondItem="qMn-tb-M2f" secondAttribute="top" id="pmM-kP-NRF"/>
+                                        <constraint firstItem="1b3-zb-jMb" firstAttribute="top" secondItem="UjU-ps-Y2p" secondAttribute="bottom" constant="-1" id="sG0-u5-vBE"/>
+                                        <constraint firstItem="UjU-ps-Y2p" firstAttribute="leading" secondItem="bDB-rT-hYD" secondAttribute="trailing" constant="8" id="wCp-rb-SDa"/>
+                                        <constraint firstItem="1b3-zb-jMb" firstAttribute="trailing" secondItem="wnX-DI-Czt" secondAttribute="trailingMargin" id="xFE-vi-XYA"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1b3-zb-jMb" secondAttribute="bottom" constant="-8" id="yUE-c1-SbQ"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="Puj-hV-9yT"/>
+                                            <exclude reference="pmM-kP-NRF"/>
+                                            <exclude reference="5Xs-CL-B23"/>
+                                            <exclude reference="jno-Nl-Y60"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.50196078431372548" green="0.30588235294117649" blue="0.60784313725490191" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <outlet property="AddressLabel" destination="UjU-ps-Y2p" id="u25-On-Hiy"/>
+                                    <outlet property="imageCell" destination="bDB-rT-hYD" id="Dn1-yW-nYb"/>
                                     <outlet property="titleLabel" destination="qMn-tb-M2f" id="hwC-cy-Yyx"/>
                                     <outlet property="urlLabel" destination="1b3-zb-jMb" id="6IX-z8-eIh"/>
                                 </connections>
