--- a/Wilson/Base.lproj/Main.storyboard
+++ b/Wilson/Base.lproj/Main.storyboard
@@ -782,7 +782,7 @@
         <image name="user-icon" width="44" height="44"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ogT-83-hAH"/>
+        <segue reference="cTM-WR-rWE"/>
         <segue reference="coF-Da-O2P"/>
         <segue reference="MIc-cH-iM4"/>
     </inferredMetricsTieBreakers>
