--- a/Wilson/Base.lproj/Main.storyboard
+++ b/Wilson/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="V6h-Ec-v9S">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -38,6 +38,54 @@
         </mutableArray>
     </customFonts>
     <scenes>
+        <!--Splash Screen-->
+        <scene sceneID="NSq-Rs-KcE">
+            <objects>
+                <viewController id="V6h-Ec-v9S" customClass="SplashScreen" customModule="Wilson" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Som-Ao-o1w"/>
+                        <viewControllerLayoutGuide type="bottom" id="x9S-rw-gIt"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="aSr-4l-IjU">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Car-Gy-0UI">
+                                <rect key="frame" x="189" y="528" width="222" height="30"/>
+                                <state key="normal" title="Don't Have an Account? Sign Up">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="ngv-6G-SDR" kind="show" id="ac5-fG-lMU"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sgN-WT-Jc0">
+                                <rect key="frame" x="205" y="475" width="191" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="191" id="6xT-li-MTs"/>
+                                </constraints>
+                                <state key="normal" title="Sign-in">
+                                    <color key="titleColor" red="0.50486643009999999" green="0.1337499264" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="fdl-VX-pHU"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.50486643009557186" green="0.13374992637692573" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="sgN-WT-Jc0" firstAttribute="centerX" secondItem="aSr-4l-IjU" secondAttribute="centerX" id="0bS-T0-XcD"/>
+                            <constraint firstItem="sgN-WT-Jc0" firstAttribute="centerX" secondItem="Car-Gy-0UI" secondAttribute="centerX" id="9gq-0j-r4L"/>
+                            <constraint firstItem="Car-Gy-0UI" firstAttribute="top" secondItem="sgN-WT-Jc0" secondAttribute="bottom" constant="23" id="ILC-55-IID"/>
+                            <constraint firstItem="sgN-WT-Jc0" firstAttribute="top" secondItem="Som-Ao-o1w" secondAttribute="bottom" constant="455" id="dC7-cq-4qp"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="35p-TL-XME" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1332" y="-226"/>
+        </scene>
         <!--Login View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -795,6 +843,8 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="cTM-WR-rWE"/>
+        <segue reference="fdl-VX-pHU"/>
+        <segue reference="ac5-fG-lMU"/>
         <segue reference="ckE-Sn-pTJ"/>
         <segue reference="coF-Da-O2P"/>
     </inferredMetricsTieBreakers>
